--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -52,10 +52,10 @@
 			<br>
 			<br>
 			<ul class="nav nav-tabs" role="tablist">
-		    	<li role="presentation" v-bind:class="{ active: index==0 }" v-for="(view, index) in views"><a :href="view.name | appendHash" :aria-controls="view.name" role="tab" data-toggle="tab">{{view.name | humanize}}</a></li>
+		    	<li role="presentation" v-bind:class="{ active: view_index==0 }" v-for="(view, view_index) in views"><a :href="view.name | appendHash" :aria-controls="view.name" role="tab" data-toggle="tab">{{view.name | humanize}}</a></li>
 		  	</ul>
 		    <div class="tab-content">
-		    	<div role="tabpanel" class="tab-pane" v-bind:class="{ active: index==0 }" v-for="(view, index) in views" :id="view.name">
+		    	<div role="tabpanel" class="tab-pane" v-bind:class="{ active: view_index==0 }" v-for="(view, view_index) in views" :id="view.name">
 		    		<div class="scrollable-table">
 		    			<table class="table" v-if="view.name != 'input' && view.name != 'swift'">
 					    	<thead>
@@ -67,7 +67,7 @@
 					    			<th>Condition</th>
 					    		</tr>
 					    	</thead>
-					    	<tbody>
+					    	<tbody :id="view.name | body">
 						    	<tr>
 						    		<td class="col-md-2">
 						    			<input class="form-control"  type="text" name="key" v-model="newfield.key">
@@ -89,13 +89,15 @@
 							    		
 					    			</td>
 							    </tr>
-					    		<tr v-for="(field, index) in view.fields">
-					    			<template v-for="(value, key) in field">
-					    				<template v-if="typeof value.value === 'string'">
-						    				<td class="col-md-2">{{key}}</td>
+							    
+							    
+					    		<tr v-for="(field, field_index) in view.fields" :id="view_index + '-' + field_index">
+					    			<!-- <template v-for="(value, key) in field"> -->
+					    				<template v-if="typeof field.value === 'string'">
+						    				<td class="col-md-2">{{field.field}}</td>
 							    			<td > 
-							    				<p v-if="typeof value.value === 'string'">
-							    					<input class="form-control" type="text" :value="value" v-model="value.value">
+							    				<p v-if="typeof field.value === 'string'">
+							    					<input class="form-control" type="text" :value="field.value" v-model="field.value">
 							    				</p> 
 							    				<!-- <p v-if="typeof value.value === 'object'">
 							    					<input class="form-control" type="" name="" v-model="new_condition.value" placeholder="value1,value2">
@@ -109,50 +111,50 @@
 							    					<input class="form-control" type="text" name="" v-model="condition_key" placeholder="material_group=110">
 							    				</p> -->
 							    			</td>
-							    			<td > <span>{{value.type | humanize}}</span> </td>
+							    			<td > <span>{{field.type | humanize}}</span> </td>
 							    			<td >
-							    				<button class="btn btn-danger" v-on:click="deleteField(view, view.fields[index], key)">Delete</button>
+							    				<button class="btn btn-danger" v-on:click="deleteField(view, view.fields[field_index], field.field)">Delete</button>
 							    				
 							    			</td>
 							    			<td>
-							    				<button class="btn btn-default" v-on:click="addCondition(view.fields[index], key)" v-if="value.type != 'filled_field'">Add Condition</button>
+							    				<button class="btn btn-default" v-on:click="addCondition(view.fields[field_index], field.field)" v-if="field.type != 'filled_field'">Add Condition</button>
 							    			</td>
 						    			</template>
 						    			<template v-else>
-						    				<td class="col-md-2">{{key}}</td>
+						    				<td class="col-md-2">{{field.field}}</td>
 							    			<td > 
 							    				<!-- <p v-if="typeof value.value === 'string'">
 							    					<input class="form-control" type="text" :value="value" v-model="view.fields[key].value">
 							    				</p> --> 
-							    				<p v-if="typeof value.value === 'object'">
+							    				<p v-if="typeof field.value === 'object'">
 							    					<input class="form-control" type="" name="" v-model="new_condition.value" placeholder="value1,value2">
 							    				</p>
-							    				<p v-if="typeof value.value === 'object'">
-							    					<input class="form-control" type="text" name=""  v-for="(condition_value, condition_key) in value.value" v-model="value.value[condition_key]">
+							    				<p v-if="typeof field.value === 'object'">
+							    					<input class="form-control" type="text" name=""  v-for="(condition_value, condition_key) in field.value" v-model="field.value[condition_key]">
 							    				</p>
 							    			</td>
-							    			<td > <span>{{value.type | humanize}}</span> </td>
+							    			<td > <span>{{field.type | humanize}}</span> </td>
 							    			<td >
-							    				<button class="btn btn-danger" v-on:click="deleteField(view, view.fields, key)">Delete</button>
+							    				<button class="btn btn-danger" v-on:click="deleteField(view, view.fields, field.field)">Delete</button>
 							    				<!-- <button v-on:click="addCondition(view.fields, key)">Add Condition</button> -->
 							    			</td>
 							    			<td>
 								    			<div class="input-group">
 								    				<input class="form-control" type="" name="" v-model="new_condition.condition" placeholder="division=cpd">
 								    				<span class="input-group-btn">
-							    						<button class="btn btn-success" v-on:click="createCondition(value.value, new_condition.condition, new_condition.value)">Save</button>
+							    						<button class="btn btn-success" v-on:click="createCondition(field.value, new_condition.condition, new_condition.value)">Save</button>
 							    					</span>
 							    					<span class="input-group-btn">
-							    						<button class="btn btn-default" v-on:click="removeCondition(view.fields[index], key)">No Condition</button>
+							    						<button class="btn btn-default" v-on:click="removeCondition(view.fields[field.index])">No Condition</button>
 							    					</span>
 								    			</div>
 							    				
 							    					<!-- <button class="btn btn-success" v-on:click="createCondition(value.value, new_condition.condition, new_condition.value)">Save</button> -->
 							    				<p >
-							    					<div class="input-group" v-for="(condition_value, condition_key) in value.value" >
+							    					<div class="input-group" v-for="(condition_value, condition_key) in field.value" >
 								    					<input class="form-control" type="text" name="" v-model="condition_key" placeholder="material_group=110">
 								    					<span class="input-group-btn">
-								    						<button class="btn btn-danger" type="button" v-on:click="deleteField(view, value.value, condition_key)">Delete Condition</button>
+								    						<button class="btn btn-danger" type="button" v-on:click="deleteField(view, field.value, condition_key)">Delete Condition</button>
 								    					</span>
 							    					
 							    					</div>
@@ -160,9 +162,11 @@
 						    					
 							    			</td>
 						    			</template>
-					    			</template>
+					    			<!-- </template> -->
 					    			
 					    		</tr>
+					    		<!-- </draggable> -->
+					    		</template>
 					    	</tbody>
 				    	</table>
 				    	<table class="table" v-if="view.name == 'input'">
@@ -338,6 +342,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	<script type="text/javascript" src="js/Sortable.min.js"></script>
+	<script type="text/javascript" src="js/vuedraganddrop.js"></script>
+	<script type="text/javascript" src="js/vuedraggable.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="jszip/dist/jszip.js"></script>
 	<script src="js/dp/vue-app.js"></script>
@@ -353,8 +360,57 @@
 		$.getJSON( "data/output.json", function( data ) {
 			$.each( data, function(i, values) {
 			  	views.push(data[i]);
-			});
+			})
+			if (views.length > 0){
+				$(document).ready(function(){
+					views.forEach(function(view){
+					// var basic = document.getElementById("basic");
+						if (view.name != 'input'&& view.name != 'swift'){
+							Sortable.create(document.getElementById(view.name + 'body'), {
+								onEnd: function(evt){
+									var item = evt.item;
+									var id = evt.item.id;
+									var view_index = id.split("-")[0];
+									var field_index = id.split("-")[1];
+									var oldIndex = evt.oldIndex;
+									var newIndex = evt.newIndex;
+									var tempField = views[view_index].fields[field_index];
+									if (newIndex > oldIndex){
+										for (var i = oldIndex-1; i < newIndex; i++){
+											evt.target.children[i].id = view_index + "-" + (i - 1);
+											views[view_index].fields[i] = views[view_index].fields[i+1];
+										}
+										views[view_index].fields[newIndex - 1] = tempField;
+									} else {
+										for (var i = oldIndex - 1; i >= newIndex; i--){
+											views[view_index].fields[i] = views[view_index].fields[i-1];
+											evt.target.children[i].id = view_index + "-" + (i-1);
+										}
+										views[view_index].fields[newIndex-1] = tempField;
+									}
+									item.id = view_index + "-" + (newIndex-1);
+								}
+							});
+						}
+						
+					})
+				})
+				
+			}
+				
+			
+
 		});
+		
+			
+			
+			// views.forEach(function(view){
+			// 	var placeholder = view.fields[draggedElement.id];
+			// 	view.fields.$set(draggedElement.id, view.fields[droppedOnElement.id]);
+			// 	view.fields.$set(droppedOnElement.id, placeholder);
+			// })
+		
+		
 		// $.getJSON( "data/edit.json", function( data ) {
 		// 	$.each( data, function(i, values) {
 		// 	  	edits.push(data[i]);
