extracting output data

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -48,7 +48,7 @@
 		</div>
 		<br>
 		<div id="app">
-			<button class="btn btn-default" v-on:click="saveData()">Save Changes</button>
+			<button class="btn btn-success" v-on:click="saveData()">Save Changes</button>
 			<br>
 			<br>
 			<ul class="nav nav-tabs" role="tablist">
@@ -343,6 +343,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<script type="text/javascript" src="js/Sortable.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 	<script type="text/javascript" src="js/vuedraganddrop.js"></script>
 	<script type="text/javascript" src="js/vuedraggable.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
