conditional multiplying field i.e. dchnl and division

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -79,6 +79,7 @@
 						    			<select class="form-control" v-model="newfield.type">
 						    				<option value="default_field">Default</option>
 						    				<option value="filled_field">Filled</option>
+						    				<option value="multiplying_field">Multiplying</option>
 						    			</select>
 						    		</td>
 						    		<td>
