--- a/views/bc/index.html
+++ b/views/bc/index.html
@@ -80,13 +80,14 @@
 				<tr v-for="(batch, index) in batches">
 					<td>{{index + 1}}</td>
 					<td>{{batch.created_by}}</td>
-					<td>{{batch.created_on}}</td>
+					<td>{{batch.created_on | displayDateInWordsWithTime}}</td>
 					<td>{{batch.marketing_approved}}</td>
 					<td>{{batch.bc_approved}}</td>
-					<td>{{batch.extracted_on}}</td>
+					<td>{{batch.extracted_on | displayDateInWordsWithTime}}</td>
 					<td>{{batch.division}}</td>
 					<td>{{batch.brand}}</td>
-					<td>{{new Date() - batch.created_on}}</td>
+					<td v-if="batch.extracted_on == ''">{{ Math.ceil(Math.abs((new Date()).getTime() - new Date(batch.created_on).getTime()) / (1000 * 3600 *24)) }}</td>
+					<td v-else>Extracted by: {{batch.extracted_by}}</td>
 					<td>
 						<button type="button" class="btn btn-primary" data-toggle="modal" :data-target="index | openModalHash">
 							View
@@ -124,7 +125,7 @@
 		        </table>
 		      </div>
 		      <div class="modal-footer">
-		      	<button type="button" class="btn btn-success" v-on:click="setBCApproved(batch_index)">Confirm</button>
+		      	<button type="button" class="btn btn-success" v-on:click="setBCApproved(batch_index)" data-dismiss="modal">Confirm</button>
 		      	<button type="button" class="btn btn-default" v-on:click="makeEditable()">Edit</button>
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 		        <button type="button" class="btn btn-primary" v-on:click="saveEdit(batch_index)">Save changes</button>
@@ -156,6 +157,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<script type="text/javascript" src="jszip/dist/jszip.js"></script>
 	<script src="js/dp/vue-app.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
 	<script type="text/javascript" src="bc/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
