--- a/views/mm/index.html
+++ b/views/mm/index.html
@@ -80,13 +80,14 @@
 				<tr v-for="(batch, index) in batches">
 					<td>{{index + 1}}</td>
 					<td>{{batch.created_by}}</td>
-					<td>{{batch.created_on}}</td>
+					<td>{{batch.created_on | displayDateInWordsWithTime}}</td>
 					<td>{{batch.marketing_approved}}</td>
 					<td>{{batch.bc_approved}}</td>
-					<td>{{batch.extracted_on}}</td>
+					<td>{{batch.extracted_on | displayDateInWordsWithTime}}</td>
 					<td>{{batch.division}}</td>
 					<td>{{batch.brand}}</td>
-					<td>{{new Date() - batch.created_on}}</td>
+					<td v-if="batch.extracted_on == ''">{{ Math.ceil(Math.abs((new Date()).getTime() - new Date(batch.created_on).getTime()) / (1000 * 3600 *24)) }}</td>
+					<td v-else>Extracted by: {{batch.extracted_by}}</td>
 					<td>
 						<button type="button" class="btn btn-primary" data-toggle="modal" :data-target="index | openModalHash">
 							View
@@ -114,7 +115,7 @@
 		        		</tr>
 		        	</thead>
 		        	<tbody>
-		        		<tr v-for="item in batch.items">
+		        		<tr v-for="(item, item_index) in batch.items">
 		        			<td v-for="(value, key) in item">
 		        				<p v-if="edit == false || views[0].fields[key].marketing_editable == false"> {{value}} </p>
 		        				<input class="form-control" v-if="edit==true && views[0].fields[key].marketing_editable == true" type="text" :name="value" v-model="item[key]">
@@ -159,6 +160,7 @@
 	<script type="text/javascript" src="mm/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
 	<script type="text/javascript">
 		// $('#raw-data').change(function(event){
 		// 	readData(event);
