changed bc to controller, mm to marketing

--- a/views/register.html
+++ b/views/register.html
@@ -29,8 +29,8 @@
         <label>Role</label>
         <select name="role" id="local-reg" class="form-control">
           <option value="creator">Creator</option>
-          <option value="mm">Marketing Manager</option>
-          <option value="bc">Business Controller</option>
+          <option value="marketing">Marketing Manager</option>
+          <option value="controller">Business Controller</option>
           <option value="admin">Admin</option>
         </select>
     </div>
