--- a/views/controller/index.html
+++ b/views/controller/index.html
@@ -113,7 +113,7 @@
 	<script type="text/javascript" src="jszip/dist/jszip.js"></script>
 	<script src="js/dp/vue-app.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
-	<script type="text/javascript" src="bc/app.js"></script>
+	<script type="text/javascript" src="controller/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript">
