--- a/views/marketing/index.html
+++ b/views/marketing/index.html
@@ -112,7 +112,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	<script type="text/javascript" src="jszip/dist/jszip.js"></script>
 	<script src="js/dp/vue-app.js"></script>
-	<script type="text/javascript" src="mm/app.js"></script>
+	<script type="text/javascript" src="marketing/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
