--- a/views/marketing/index.html
+++ b/views/marketing/index.html
@@ -13,7 +13,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" rel="stylesheet"/>
 </head>
 <body>
-	<div class="container" id="app">
+	<div class="container-fluid" id="app">
 		<h1>Product Information System <small id="user"><span class="glyphicon glyphicon-user"></span> {{user.username}}
 		<p><a href="/logout">Log out</a></p></small></h1>
 		<table class="table">
@@ -26,7 +26,8 @@
 					<th>BC Confirm</th>
 					<th>Extracted On</th>
 					<th>Division</th>
-					<th>Brand</th>
+					<th>Signature</th>
+					<th>Category</th>
 					<th>Days Pending</th>
 					<th>Action</th>
 				</tr>
@@ -40,7 +41,8 @@
 					<td class="center"><span class="glyphicon glyphicon-ok" v-if="batch.bc_approved == true"></span></td>
 					<td>{{batch.extracted_on | displayDateInWordsWithTime}}</td>
 					<td>{{batch.division}}</td>
-					<td>{{batch.brand}}</td>
+					<td>{{batch.signature}}</td>
+					<td>{{batch.category}}</td>
 					<td v-if="batch.extracted_on == ''">{{ Math.ceil(Math.abs((new Date()).getTime() - new Date(batch.created_on).getTime()) / (1000 * 3600 *24)) }}</td>
 					<td v-else>Extracted by: {{batch.extracted_by}}</td>
 					<td>
@@ -66,14 +68,18 @@
 		        <table class="table">
 		        	<thead>
 		        		<tr v-for="(item, item_index) in batch.items" v-if="item_index == 0">
-		        			<th v-for="(value, key) in item">{{key}}</th>
+		        			<th>SAP　Code</th>
+		        			<th>Description</th>
+		        			<th v-for="(value, key) in item" v-if="views[0].fields[key].marketing_editable == true">{{key}} <span v-if="key == 'margin' || key == 'vat'">%</span></th>
 		        		</tr>
 		        	</thead>
 		        	<tbody>
 		        		<tr v-for="(item, item_index) in batch.items">
-		        			<td v-for="(value, key) in item">
+		        			<td>{{item.sap_code}}</td>
+		        			<td>{{item.description}}</td>
+		        			<td v-for="(value, key) in item" v-if="views[0].fields[key].marketing_editable == true">
 		        				<p v-if="edit == false || views[0].fields[key].marketing_editable == false"> {{value}} </p>
-		        				<input class="form-control" v-if="edit==true && views[0].fields[key].marketing_editable == true" type="text" :name="value" v-model="item[key]">
+		        				<input class="form-control" v-on:change="computeListPrice(batch_index, item_index, key)" v-if="edit==true && views[0].fields[key].marketing_editable == true" type="text" :name="value" v-model="item[key]">
 		        			</td>
 		        		</tr>
 		        	</tbody>
